--- a/src/styles.css
+++ b/src/styles.css
@@ -40,9 +40,12 @@ body {
 
 .App {
   font-family: sans-serif;
-  text-align: center;
   max-width: 600px;
   margin: 0 auto;
+}
+
+header {
+  text-align: center;
 }
 
 label {
@@ -68,12 +71,13 @@ textarea {
 }
 
 button {
+  display: block;
   padding: 1rem 1.5rem;
+  margin: 0 auto 1rem auto;
   background-color: rgb(0, 65, 194);
   color: white;
   font-weight: bold;
   border: none;
-  margin-bottom: 1rem;
 }
 
 .button-success {
@@ -115,31 +119,29 @@ button {
 
 .Table th:nth-child(1),
 .Table td:nth-child(1) {
-  max-width: 160px;
+  max-width: 190px;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
 }
 
-.Table th:nth-child(2),
-.Table td:nth-child(2),
 .Table th:nth-child(3),
 .Table td:nth-child(3) {
   width: 70px;
   text-align: center;
 }
 
+.Table th:nth-child(4),
+.Table td:nth-child(4),
 .Table th:nth-child(5),
-.Table td:nth-child(5),
-.Table th:nth-child(6),
-.Table td:nth-child(6) {
+.Table td:nth-child(5) {
   width: 40px;
   text-align: center;
 }
 
-.Table th:nth-child(4),
-.Table td:nth-child(4) {
-  max-width: 220px;
+.Table th:nth-child(2),
+.Table td:nth-child(2) {
+  max-width: 260px;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
@@ -149,4 +151,12 @@ button {
   box-sizing: border-box;
   padding: 0.5rem;
   background-color: #ddd;
+}
+
+.DateBox {
+  display: flex;
+}
+
+.DateBox > div:first-child {
+  margin-right: 2rem;
 }
