--- a/src/styles.css
+++ b/src/styles.css
@@ -70,13 +70,19 @@ textarea {
   min-height: 4rem;
 }
 
-button {
+button,
+.DownloadButton {
   display: block;
+  width: auto;
   padding: 1rem 1.5rem;
   margin: 0 auto 1rem auto;
   background-color: rgb(0, 65, 194);
   color: white;
+  font-size: 0.875rem;
   font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  line-height: 1;
   border: none;
 }
 
@@ -91,6 +97,10 @@ button {
 
 .button-error {
   background-color: #e1261c;
+}
+
+.DownloadButton {
+  width: 10rem;
 }
 
 #copyNode {
