--- a/src/components/PreviewPage/styles.css
+++ b/src/components/PreviewPage/styles.css
@@ -2,15 +2,13 @@
   margin-bottom: 2rem;
 }
 
-.StoriesPreview > h1 {
-  text-align: center;
-}
-
 .PreviewItem {
+  display: block;
   padding: 1.5rem 1rem;
   width: 420px;
   margin: 0 auto;
   border-bottom: 1px solid rgba(224, 224, 224, 1);
+  text-decoration: none;
 }
 
 .PreviewItem span {
@@ -36,6 +34,7 @@
   line-height: 1.5rem;
   margin: 0 0 0.625rem 0;
   font-size: 1.125rem;
+  color: black;
 }
 
 .PreviewItem p {
