--- a/src/components/PreviewPage/styles.css
+++ b/src/components/PreviewPage/styles.css
@@ -2,11 +2,15 @@
   margin-bottom: 2rem;
 }
 
+.PreviewContainer {
+  display: flex;
+}
+
 .PreviewItem {
   display: block;
   padding: 1.5rem 1rem;
   width: 420px;
-  margin: 0 auto;
+  margin: 0 auto 0 0;
   border-bottom: 1px solid rgba(224, 224, 224, 1);
   text-decoration: none;
 }
