Try again - changes that aren't committing from codesandbox

--- a/src/components/PreviewPage/styles.css
+++ b/src/components/PreviewPage/styles.css
@@ -15,6 +15,15 @@
   text-decoration: none;
 }
 
+.AdditionalInfo {
+  width: 180px;
+  padding: 1rem;
+}
+
+.AdditionalInfo h1 {
+  font-size: 16px;
+}
+
 .PreviewItem span {
   max-width: 26.25rem;
   font-family: "Roboto", "Roboto-Regular", Helvetica, Arial, sans-serif;
