Code formatting + News section - added news components as copy/paste from articles components with the app context controlling which ones to show - added content type to the app context to control the articles v. news selection - added button hover styles to make them more apparent - added content type selector to the main welcome page

--- a/src/components/Table/styles.css
+++ b/src/components/Table/styles.css
@@ -48,5 +48,9 @@
 .Table button {
   box-sizing: border-box;
   padding: 0.5rem;
-  background-color: #ddd;
+  background-color: hsl(0, 0%, 90%);
+}
+
+.Table button:hover {
+  background-color: hsl(0, 0%, 80%);
 }
