--- a/src/styles.css
+++ b/src/styles.css
@@ -48,8 +48,7 @@ button,
 .Button {
   display: inline-block;
   padding: 1rem 1.5rem;
-  margin: 0 auto;
-  background-color: rgb(0, 65, 194);
+  background-color: hsl(220, 100%, 38%);
   color: white;
   font-size: 0.875rem;
   font-weight: bold;
@@ -57,6 +56,12 @@ button,
   text-decoration: none;
   line-height: 1;
   border: none;
+}
+
+button:hover,
+.Button:hover {
+  cursor: pointer;
+  background-color: hsl(220, 100%, 28%);
 }
 
 .Button-success {
@@ -86,6 +91,6 @@ button,
   display: flex;
 }
 
-.DateBox > div:first-child {
+.DateBox>div:first-child {
   margin-right: 2rem;
 }
